Restructured part of the header for mobile and created the MenuIcon component

--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="cart-slider"></div>
+    <div id="mobile-nav"></div>
     <div id="notification-wrapper"></div>
     <div id="root"></div>
     <!--
